# filler

./: .gitignore  CMakeLists.txt  Makefile  filler.trace
include/: filler.h
libft/: Makefile  libft.h
libft/gnl_src/: get_next_line.c  get_next_line.h
libft/printf_src/include/: ft_printf.h
resources/: filler.trace
src/: count_dist.c  free_maps.c  helpers.c  main.c  place_piece.c  read_input.c  trim_piece.c
test/: 1.txt  get_next_line.c  main.c
